styles/style.css
/** @format */

html {
	/* Bulma doesn't have an option for dark mode colours, so I've got to override the background colour here. */
	background: #282a36;
}

/* Setting those dark mode colours #draculatheme4lyfe */
.card,
.box,
label {
	background: #44475a;
	color: #f8f8f2;
	min-height: 100%;
}

.input,
.button {
	color: #f8f8f2;
	background-color: #6272a4;
	border-color: #6272a4;
}

.button:hover {
	color: #f8f8f2;
	background-color: #6272a4;
	border-color: #6272a4;
}

.card-header {
	background: #4a4d60;
}
.weather-card hr {
	background-color: #4a4d60;
}
.weather-card table {
	color: #f8f8f2;
	background-color: #4a4d60;
}
.weather-card th,
.weather-card td {
	color: #f8f8f2;
	border-color: #44475a;
}

.weather-card .card-header-date {
	font-size: 1.4rem;
	font-weight:bold;
	color: #44475a;
	background: #f8f8f2;
	padding: 2px;
	margin: 5px 10px 5px 5px;
	border-radius: 2px;
}

.weather-card .card-header-day {
	font-size: 1.4rem;
	padding: 6px;
}
.weather-card figcaption {
	font-size: 1.2rem;
	font-weight: bold;
}
.weather-card .weekday-meal-container {
	position: relative;
}
.weather-card .meal-remove {
	cursor: pointer;
	position: absolute;
	color: #44475a;
	background: #f8f8f2;    
	right: -11px;
	top: -11px;
  width: 22px;
  border-radius: 16px;
  height: 22px;
  padding-left: 6px;
}
.weather-card select {
	color: #f8f8f2;
	background: #44475a;
}
#clock {
	font-size: 44px;
}

.button {
	margin-top: 1.5em;
}

h2,
label,
.card-header-title {
	color: #f8f8f2 !important;
	margin-top: 0.5em;
}

.weather {
	background: #5d6175;
	box-shadow: 3px 3px 3px #1c1c1c4f;
}

.card-content {
	text-transform: capitalize;
}

.NASA {
	display: flex;
}

.astro-pic,
#APOTD {
	width: 100%;
}

#APOTD {
	overflow: hidden;
	flex: 0.5;
}

#APOTD-deets {
	flex: 1;
}

.card.first-card {
	margin-top: 30px;
}

#cat-fact{
    margin-top: 15px;
}





.recipe-card .content { 
	font-weight: bold;
	font-size: 1.4rem
}

.recipe-card .card-footer-item {
	cursor: pointer;
}

